--- a/mediator/CMakeLists.txt
+++ b/mediator/CMakeLists.txt
@@ -9,6 +9,8 @@ endif()
 add_library(mediator ${type} ${src})
 target_include_directories(mediator PUBLIC .)
 target_link_libraries(mediator putils)
+include(cotire)
+cotire(mediator)
 
 if (UNIX)
     target_link_libraries(mediator pthread)
