commented cotire example in http to avoid errors people may not understand

--- a/http/CMakeLists.txt
+++ b/http/CMakeLists.txt
@@ -19,5 +19,5 @@ if (WIN32)
     target_link_libraries(http wsock32 ws2_32)
 endif ()
 
-include(cotire)
-cotire(http)
+# include(cotire)
+# cotire(http)
