added lua sources

--- a/lua/CMakeLists.txt
+++ b/lua/CMakeLists.txt
@@ -1,10 +1,9 @@
-set(LUA_PC_CFG "lua;lua5.3;lua5.2;lua5.1" CACHE STRING "pkg-config Lua configuration file (or files, separated by ;)")
+if(UNIX)
+    set(type SHARED)
+elseif(WIN32)
+    set(type STATIC)
+endif()
 
-find_package(Lua QUIET)
-
-if (LUA_FOUND)
-    add_library(lua INTERFACE)
-    target_link_libraries(lua INTERFACE ${LUA_LIBRARIES})
-    target_include_directories(lua INTERFACE ${LUA_INCLUDE_DIR} .)
-    cotire(lua)
-endif ()
+file(GLOB src lua/src/*)
+add_library(lua ${type} ${src})
+target_include_directories(lua PUBLIC ${CMAKE_CURRENT_LIST_DIR} ${CMAKE_CURRENT_LIST_DIR}/lua/src)
