made compiling libraries optional

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,11 +1,23 @@
 set(CMAKE_MODULE_PATH ${CMAKE_MODULE_PATH} ${CMAKE_CURRENT_LIST_DIR}/CMakeModules)
 
-add_subdirectory(mediator)
 add_subdirectory(connection)
 add_subdirectory(pluginManager)
-add_subdirectory(http)
-add_subdirectory(lua)
-add_subdirectory(python)
+
+if(PUTILS_BUILD_MEDIATOR)
+    add_subdirectory(mediator)
+endif()
+
+if(PUTILS_BUILD_HTTP)
+    add_subdirectory(http)
+endif()
+
+if(PUTILS_BUILD_LUA)
+    add_subdirectory(lua)
+endif()
+
+if(PUTILS_BUILD_PYTHON)
+    add_subdirectory(python)
+endif()
 
 if (PUTILS_BUILD_PSE)
     add_subdirectory(pse)
